parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    CTESTRING
    SUM
    BETWEEN
    CTEBOOL

Grammar

Rule 0     S' -> program
Rule 1     program -> functions MODEL LCURLY vars data model bloque2 RCURLY
Rule 2     functions -> funcion functions
Rule 3     functions -> empty
Rule 4     vars -> varblock
Rule 5     vars -> empty
Rule 6     varblock -> VARS LCURLY lvars RCURLY
Rule 7     model -> optimize
Rule 8     model -> optimize where
Rule 9     model -> bloque2
Rule 10    model -> empty
Rule 11    optimize -> MIN LCURLY statement where RCURLY
Rule 12    optimize -> MAX LCURLY statement where RCURLY
Rule 13    build -> BUILD expresion SEMIC
Rule 14    where -> WHERE LCURLY bloque2 RCURLY
Rule 15    wherecondition -> CONDITION expresion SEMIC
Rule 16    statement -> declaration
Rule 17    statement -> asign
Rule 18    statement -> condition
Rule 19    statement -> write
Rule 20    statement -> ciclo
Rule 21    statement -> return
Rule 22    statement -> build
Rule 23    statement -> wherecondition
Rule 24    data -> DATA LCURLY asignmany RCURLY
Rule 25    asignmany -> asign asignmany
Rule 26    asignmany -> empty
Rule 27    asign -> id asign_signo expresiones SEMIC
Rule 28    asign -> expresiones
Rule 29    expresiones -> expresion COMMA expresiones
Rule 30    expresiones -> expresion
Rule 31    asign_signo -> ASEQ
Rule 32    asign_signo -> PLUSEQ
Rule 33    asign_signo -> MINEQ
Rule 34    asign_signo -> MULTEQ
Rule 35    asign_signo -> DIVEQ
Rule 36    condition -> IF asign bloque condition1
Rule 37    condition1 -> ELSE bloque
Rule 38    condition1 -> empty
Rule 39    write -> PRINT asign write2 SEMIC
Rule 40    write2 -> COMMA asign write2
Rule 41    write2 -> empty
Rule 42    ciclo -> FOR ID IN DOT ID bloque
Rule 43    funcion -> FUNC ID LPAREN funcion1 RPAREN funcion3 bloque
Rule 44    funcion1 -> type ID funcion2
Rule 45    funcion1 -> <empty>
Rule 46    funcion2 -> COMMA type ID funcion2
Rule 47    funcion2 -> <empty>
Rule 48    funcion3 -> LPAREN type RPAREN
Rule 49    funcion3 -> <empty>
Rule 50    lvars -> declaration lvars
Rule 51    lvars -> empty
Rule 52    declaration -> typedeclaration POINTS ID dec22 SEMIC
Rule 53    typedeclaration -> type dimensionsfixed
Rule 54    dimensions -> LBRACKET expresion RBRACKET dimensions
Rule 55    dimensions -> empty
Rule 56    dimensionsfixed -> LBRACKET CTEI RBRACKET dimensionsfixed
Rule 57    dimensionsfixed -> empty
Rule 58    dec22 -> COMMA ID dec22
Rule 59    dec22 -> empty
Rule 60    bloque -> LCURLY bloque2 RCURLY
Rule 61    bloque2 -> statement bloque2
Rule 62    bloque2 -> empty
Rule 63    return -> RETURN asign
Rule 64    expresion -> expresion2 expresioni
Rule 65    expresioni -> OR expresion
Rule 66    expresioni -> empty
Rule 67    expresion2 -> expresion3 expresion2i
Rule 68    expresion2i -> AND expresion2
Rule 69    expresion2i -> empty
Rule 70    expresion3 -> expresion4 expresion3i
Rule 71    expresion3i -> ORB expresion3
Rule 72    expresion3i -> empty
Rule 73    expresion4 -> expresion5 expresion4i
Rule 74    expresion4i -> XOR expresion4
Rule 75    expresion4i -> empty
Rule 76    expresion5 -> expresion6 expresion5i
Rule 77    expresion5i -> ANDB expresion5
Rule 78    expresion5i -> empty
Rule 79    expresion6 -> expresion7 expresion6i
Rule 80    expresion6i -> EQ expresion6
Rule 81    expresion6i -> DIF expresion6
Rule 82    expresion6i -> empty
Rule 83    expresion7 -> expresion8 expresion7i
Rule 84    expresion7i -> SHR expresion7
Rule 85    expresion7i -> SHL expresion7
Rule 86    expresion7i -> empty
Rule 87    expresion8 -> expresion9 expresion8i
Rule 88    expresion8i -> GREATERTHAN expresion8
Rule 89    expresion8i -> LESSTHAN expresion8
Rule 90    expresion8i -> GREATEREQUAL expresion8
Rule 91    expresion8i -> LESSEQUAL expresion8
Rule 92    expresion8i -> empty
Rule 93    expresion9 -> termino expresion9i
Rule 94    expresion9i -> PLUS expresion9
Rule 95    expresion9i -> MINUS expresion9
Rule 96    expresion9i -> empty
Rule 97    termino -> factor termino2
Rule 98    termino2 -> STAR termino
Rule 99    termino2 -> SLASH termino
Rule 100   termino2 -> MOD termino
Rule 101   termino2 -> empty
Rule 102   factor -> exponencial factor2
Rule 103   factor2 -> EXP factor
Rule 104   factor2 -> empty
Rule 105   exponencial -> LPAREN expresion RPAREN
Rule 106   exponencial -> exponencial2 valor
Rule 107   exponencial2 -> NOT
Rule 108   exponencial2 -> MM
Rule 109   exponencial2 -> PP
Rule 110   exponencial2 -> NEW
Rule 111   exponencial2 -> empty
Rule 112   valor -> id
Rule 113   valor -> int
Rule 114   valor -> float
Rule 115   int -> CTEI
Rule 116   id -> ID llamarfuncion
Rule 117   id -> ID dimensions
Rule 118   float -> CTEF
Rule 119   llamarfuncion -> LPAREN llamarfuncion3 RPAREN
Rule 120   llamarfuncion3 -> asign llamarfuncion33
Rule 121   llamarfuncion3 -> empty
Rule 122   llamarfuncion33 -> COMMA asign llamarfuncion33
Rule 123   llamarfuncion33 -> empty
Rule 124   type -> TINT
Rule 125   type -> TBOOL
Rule 126   type -> TFLOAT
Rule 127   empty -> <empty>

Terminals, with rules where they appear

AND                  : 68
ANDB                 : 77
ASEQ                 : 31
BETWEEN              : 
BUILD                : 13
COMMA                : 29 40 46 58 122
CONDITION            : 15
CTEBOOL              : 
CTEF                 : 118
CTEI                 : 56 115
CTESTRING            : 
DATA                 : 24
DIF                  : 81
DIVEQ                : 35
DOT                  : 42
ELSE                 : 37
EQ                   : 80
EXP                  : 103
FOR                  : 42
FUNC                 : 43
GREATEREQUAL         : 90
GREATERTHAN          : 88
ID                   : 42 42 43 44 46 52 58 116 117
IF                   : 36
IN                   : 42
LBRACKET             : 54 56
LCURLY               : 1 6 11 12 14 24 60
LESSEQUAL            : 91
LESSTHAN             : 89
LPAREN               : 43 48 105 119
MAX                  : 12
MIN                  : 11
MINEQ                : 33
MINUS                : 95
MM                   : 108
MOD                  : 100
MODEL                : 1
MULTEQ               : 34
NEW                  : 110
NOT                  : 107
OR                   : 65
ORB                  : 71
PLUS                 : 94
PLUSEQ               : 32
POINTS               : 52
PP                   : 109
PRINT                : 39
RBRACKET             : 54 56
RCURLY               : 1 6 11 12 14 24 60
RETURN               : 63
RPAREN               : 43 48 105 119
SEMIC                : 13 15 27 39 52
SHL                  : 85
SHR                  : 84
SLASH                : 99
STAR                 : 98
SUM                  : 
TBOOL                : 125
TFLOAT               : 126
TINT                 : 124
VARS                 : 6
WHERE                : 14
XOR                  : 74
error                : 

Nonterminals, with rules where they appear

asign                : 17 25 36 39 40 63 120 122
asign_signo          : 27
asignmany            : 24 25
bloque               : 36 37 42 43
bloque2              : 1 9 14 60 61
build                : 22
ciclo                : 20
condition            : 18
condition1           : 36
data                 : 1
dec22                : 52 58
declaration          : 16 50
dimensions           : 54 117
dimensionsfixed      : 53 56
empty                : 3 5 10 26 38 41 51 55 57 59 62 66 69 72 75 78 82 86 92 96 101 104 111 121 123
exponencial          : 102
exponencial2         : 106
expresion            : 13 15 29 30 54 65 105
expresion2           : 64 68
expresion2i          : 67
expresion3           : 67 71
expresion3i          : 70
expresion4           : 70 74
expresion4i          : 73
expresion5           : 73 77
expresion5i          : 76
expresion6           : 76 80 81
expresion6i          : 79
expresion7           : 79 84 85
expresion7i          : 83
expresion8           : 83 88 89 90 91
expresion8i          : 87
expresion9           : 87 94 95
expresion9i          : 93
expresiones          : 27 28 29
expresioni           : 64
factor               : 97 103
factor2              : 102
float                : 114
funcion              : 2
funcion1             : 43
funcion2             : 44 46
funcion3             : 43
functions            : 1 2
id                   : 27 112
int                  : 113
llamarfuncion        : 116
llamarfuncion3       : 119
llamarfuncion33      : 120 122
lvars                : 6 50
model                : 1
optimize             : 7 8
program              : 0
return               : 21
statement            : 11 12 61
termino              : 93 98 99 100
termino2             : 97
type                 : 44 46 48 53
typedeclaration      : 52
valor                : 106
varblock             : 4
vars                 : 1
where                : 8 11 12
wherecondition       : 23
write                : 19
write2               : 39 40

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . functions MODEL LCURLY vars data model bloque2 RCURLY
    (2) functions -> . funcion functions
    (3) functions -> . empty
    (43) funcion -> . FUNC ID LPAREN funcion1 RPAREN funcion3 bloque
    (127) empty -> .

    FUNC            shift and go to state 3
    MODEL           reduce using rule 127 (empty -> .)

    functions                      shift and go to state 1
    program                        shift and go to state 2
    empty                          shift and go to state 4
    funcion                        shift and go to state 5

state 1

    (1) program -> functions . MODEL LCURLY vars data model bloque2 RCURLY

    MODEL           shift and go to state 6


state 2

    (0) S' -> program .



state 3

    (43) funcion -> FUNC . ID LPAREN funcion1 RPAREN funcion3 bloque

    ID              shift and go to state 7


state 4

    (3) functions -> empty .

    MODEL           reduce using rule 3 (functions -> empty .)


state 5

    (2) functions -> funcion . functions
    (2) functions -> . funcion functions
    (3) functions -> . empty
    (43) funcion -> . FUNC ID LPAREN funcion1 RPAREN funcion3 bloque
    (127) empty -> .

    FUNC            shift and go to state 3
    MODEL           reduce using rule 127 (empty -> .)

    functions                      shift and go to state 8
    empty                          shift and go to state 4
    funcion                        shift and go to state 5

state 6

    (1) program -> functions MODEL . LCURLY vars data model bloque2 RCURLY

    LCURLY          shift and go to state 9


state 7

    (43) funcion -> FUNC ID . LPAREN funcion1 RPAREN funcion3 bloque

    LPAREN          shift and go to state 10


state 8

    (2) functions -> funcion functions .

    MODEL           reduce using rule 2 (functions -> funcion functions .)


state 9

    (1) program -> functions MODEL LCURLY . vars data model bloque2 RCURLY
    (4) vars -> . varblock
    (5) vars -> . empty
    (6) varblock -> . VARS LCURLY lvars RCURLY
    (127) empty -> .

    VARS            shift and go to state 11
    DATA            reduce using rule 127 (empty -> .)

    vars                           shift and go to state 12
    varblock                       shift and go to state 13
    empty                          shift and go to state 14

state 10

    (43) funcion -> FUNC ID LPAREN . funcion1 RPAREN funcion3 bloque
    (44) funcion1 -> . type ID funcion2
    (45) funcion1 -> .
    (124) type -> . TINT
    (125) type -> . TBOOL
    (126) type -> . TFLOAT

    RPAREN          reduce using rule 45 (funcion1 -> .)
    TINT            shift and go to state 15
    TBOOL           shift and go to state 18
    TFLOAT          shift and go to state 16

    funcion1                       shift and go to state 17
    type                           shift and go to state 19

state 11

    (6) varblock -> VARS . LCURLY lvars RCURLY

    LCURLY          shift and go to state 20


state 12

    (1) program -> functions MODEL LCURLY vars . data model bloque2 RCURLY
    (24) data -> . DATA LCURLY asignmany RCURLY

    DATA            shift and go to state 21

    data                           shift and go to state 22

state 13

    (4) vars -> varblock .

    DATA            reduce using rule 4 (vars -> varblock .)


state 14

    (5) vars -> empty .

    DATA            reduce using rule 5 (vars -> empty .)


state 15

    (124) type -> TINT .

    RPAREN          reduce using rule 124 (type -> TINT .)
    LBRACKET        reduce using rule 124 (type -> TINT .)
    POINTS          reduce using rule 124 (type -> TINT .)
    ID              reduce using rule 124 (type -> TINT .)


state 16

    (126) type -> TFLOAT .

    RPAREN          reduce using rule 126 (type -> TFLOAT .)
    LBRACKET        reduce using rule 126 (type -> TFLOAT .)
    POINTS          reduce using rule 126 (type -> TFLOAT .)
    ID              reduce using rule 126 (type -> TFLOAT .)


state 17

    (43) funcion -> FUNC ID LPAREN funcion1 . RPAREN funcion3 bloque

    RPAREN          shift and go to state 23


state 18

    (125) type -> TBOOL .

    RPAREN          reduce using rule 125 (type -> TBOOL .)
    LBRACKET        reduce using rule 125 (type -> TBOOL .)
    POINTS          reduce using rule 125 (type -> TBOOL .)
    ID              reduce using rule 125 (type -> TBOOL .)


state 19

    (44) funcion1 -> type . ID funcion2

    ID              shift and go to state 24


state 20

    (6) varblock -> VARS LCURLY . lvars RCURLY
    (50) lvars -> . declaration lvars
    (51) lvars -> . empty
    (52) declaration -> . typedeclaration POINTS ID dec22 SEMIC
    (127) empty -> .
    (53) typedeclaration -> . type dimensionsfixed
    (124) type -> . TINT
    (125) type -> . TBOOL
    (126) type -> . TFLOAT

    RCURLY          reduce using rule 127 (empty -> .)
    TINT            shift and go to state 15
    TBOOL           shift and go to state 18
    TFLOAT          shift and go to state 16

    typedeclaration                shift and go to state 25
    lvars                          shift and go to state 26
    declaration                    shift and go to state 27
    type                           shift and go to state 28
    empty                          shift and go to state 29

state 21

    (24) data -> DATA . LCURLY asignmany RCURLY

    LCURLY          shift and go to state 30


state 22

    (1) program -> functions MODEL LCURLY vars data . model bloque2 RCURLY
    (7) model -> . optimize
    (8) model -> . optimize where
    (9) model -> . bloque2
    (10) model -> . empty
    (11) optimize -> . MIN LCURLY statement where RCURLY
    (12) optimize -> . MAX LCURLY statement where RCURLY
    (61) bloque2 -> . statement bloque2
    (62) bloque2 -> . empty
    (127) empty -> .
    (16) statement -> . declaration
    (17) statement -> . asign
    (18) statement -> . condition
    (19) statement -> . write
    (20) statement -> . ciclo
    (21) statement -> . return
    (22) statement -> . build
    (23) statement -> . wherecondition
    (52) declaration -> . typedeclaration POINTS ID dec22 SEMIC
    (27) asign -> . id asign_signo expresiones SEMIC
    (28) asign -> . expresiones
    (36) condition -> . IF asign bloque condition1
    (39) write -> . PRINT asign write2 SEMIC
    (42) ciclo -> . FOR ID IN DOT ID bloque
    (63) return -> . RETURN asign
    (13) build -> . BUILD expresion SEMIC
    (15) wherecondition -> . CONDITION expresion SEMIC
    (53) typedeclaration -> . type dimensionsfixed
    (116) id -> . ID llamarfuncion
    (117) id -> . ID dimensions
    (29) expresiones -> . expresion COMMA expresiones
    (30) expresiones -> . expresion
    (124) type -> . TINT
    (125) type -> . TBOOL
    (126) type -> . TFLOAT
    (64) expresion -> . expresion2 expresioni
    (67) expresion2 -> . expresion3 expresion2i
    (70) expresion3 -> . expresion4 expresion3i
    (73) expresion4 -> . expresion5 expresion4i
    (76) expresion5 -> . expresion6 expresion5i
    (79) expresion6 -> . expresion7 expresion6i
    (83) expresion7 -> . expresion8 expresion7i
    (87) expresion8 -> . expresion9 expresion8i
    (93) expresion9 -> . termino expresion9i
    (97) termino -> . factor termino2
    (102) factor -> . exponencial factor2
    (105) exponencial -> . LPAREN expresion RPAREN
    (106) exponencial -> . exponencial2 valor
    (107) exponencial2 -> . NOT
    (108) exponencial2 -> . MM
    (109) exponencial2 -> . PP
    (110) exponencial2 -> . NEW
    (111) exponencial2 -> . empty

  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for BUILD resolved as shift
  ! shift/reduce conflict for CONDITION resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for TINT resolved as shift
  ! shift/reduce conflict for TBOOL resolved as shift
  ! shift/reduce conflict for TFLOAT resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for MM resolved as shift
  ! shift/reduce conflict for PP resolved as shift
  ! shift/reduce conflict for NEW resolved as shift
    MIN             shift and go to state 32
    MAX             shift and go to state 68
    RCURLY          reduce using rule 127 (empty -> .)
    CTEI            reduce using rule 127 (empty -> .)
    CTEF            reduce using rule 127 (empty -> .)
    IF              shift and go to state 63
    PRINT           shift and go to state 36
    FOR             shift and go to state 52
    RETURN          shift and go to state 31
    BUILD           shift and go to state 58
    CONDITION       shift and go to state 70
    ID              shift and go to state 40
    TINT            shift and go to state 15
    TBOOL           shift and go to state 18
    TFLOAT          shift and go to state 16
    LPAREN          shift and go to state 59
    NOT             shift and go to state 71
    MM              shift and go to state 67
    PP              shift and go to state 66
    NEW             shift and go to state 35

  ! IF              [ reduce using rule 127 (empty -> .) ]
  ! PRINT           [ reduce using rule 127 (empty -> .) ]
  ! FOR             [ reduce using rule 127 (empty -> .) ]
  ! RETURN          [ reduce using rule 127 (empty -> .) ]
  ! BUILD           [ reduce using rule 127 (empty -> .) ]
  ! CONDITION       [ reduce using rule 127 (empty -> .) ]
  ! ID              [ reduce using rule 127 (empty -> .) ]
  ! TINT            [ reduce using rule 127 (empty -> .) ]
  ! TBOOL           [ reduce using rule 127 (empty -> .) ]
  ! TFLOAT          [ reduce using rule 127 (empty -> .) ]
  ! LPAREN          [ reduce using rule 127 (empty -> .) ]
  ! NOT             [ reduce using rule 127 (empty -> .) ]
  ! MM              [ reduce using rule 127 (empty -> .) ]
  ! PP              [ reduce using rule 127 (empty -> .) ]
  ! NEW             [ reduce using rule 127 (empty -> .) ]
